# serverless-captcha

./: .env.example  .gitignore  Cargo.toml  readme.md
api/: check.rs  generate.rs
src-rs/: lib.rs
